# KotlinApp

./: app.gradle  applicationId.gradle  build.gradle  config.gradle  gradle.properties  keystore.jks  libbase.gradle  settings.gradle
app/: build.gradle  gradle.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_test_mvp.xml  app_fragment_second.xml  fragment_second.xml
base/database/: build.gradle
base/database/src/main/: AndroidManifest.xml
base/network/: build.gradle
base/network/src/main/: AndroidManifest.xml
base/utils/: build.gradle
base/utils/src/main/: AndroidManifest.xml
business/home/: build.gradle  gradle.properties
business/home/src/main/: AndroidManifest.xml
business/home/src/main/runalone/: AndroidManifest.xml
business/media/: gradle.properties
business/media/src/main/: AndroidManifest.xml
business/media/src/main/runalone/: AndroidManifest.xml
business/mine/: build.gradle  gradle.properties
business/mine/src/main/: AndroidManifest.xml
business/mine/src/main/runalone/: AndroidManifest.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/res/layout/: common_layout_state_empty.xml  common_layout_toolbar_content.xml  layout_state_error.xml  layout_state_loading.xml
gradle/wrapper/: gradle-wrapper.properties
keystore/: build.gradle  readme.txt
keystore/src/main/: AndroidManifest.xml
keystore/src/main/cpp/: CMakeLists.txt  key-lib.cpp
lib_aar_module/: build.gradle  keystore.aar
pluginlibrary/: build.gradle
(+99 files in other folders)
